<resources>
    <string name="app_name">EkranTasarimiUnite2</string>
    <string name="sifre">Şifrenizi yazınız.</string>
    <string name="checkbox1">CheckBox</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
</resources>